Code cleanup and added unit tests